dashboard in progress

--- a/src/pages/Dashboard/styles.css
+++ b/src/pages/Dashboard/styles.css
@@ -1,3 +1,47 @@
 #navbar {
   background-color: #ffc107;
 }
+.welcome {
+  font-size: 20px;
+  color: #fff;
+  font-weight: 500;
+}
+
+#stats {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+
+.subtitle {
+  font-weight: 500;
+  font-size: 18px;
+  text-align: inherit;
+}
+
+.star-icon {
+  width: 63px;
+  height: 63px;
+  color: goldenrod;
+  margin-bottom: 10px;
+}
+
+.road-icon {
+  width: 63px;
+  height: 63px;
+  margin-bottom: 10px;
+}
+
+.bed-icon {
+  width: 63px;
+  height: 63px;
+  color: #2a9d8f;
+  margin-bottom: 10px;
+}
+
+.route-icon {
+  width: 63px;
+  height: 63px;
+  color: rgb(155, 25, 25);
+  margin-bottom: 10px;
+}
