--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -6,17 +6,18 @@ navbar {
 #btn-signup {
   color: #fff !important;
   font-weight: 600;
-  font-size: 16px;
+  width: 130px;
+
 }
 
-button {
-  width: 112px;
+navbar button {
   margin-top: 10px;
 }
 
 form {
   width: 350px !important;
   margin: 0 auto;
+  margin-top: 100px !important;
 
   padding: 30px 45px 30px 45px;
   border: 1px solid #ccc;
