--- a/src/pages/Destination/styles.css
+++ b/src/pages/Destination/styles.css
@@ -14,6 +14,16 @@ button {
   margin-top: 10px;
 }
 
+button a {
+  color: #fff;
+  text-decoration: none;
+}
+
+button a:hover {
+  color: #fff;
+  text-decoration: none;
+}
+
 form {
   width: 350px !important;
   margin: 0 auto;
